tests/baselines/reference/superAccess2.errors.txt
==== tests/cases/compiler/superAccess2.ts (13 errors) ====
    class P {
        x() { }
        static y() { }
    }
    
    class Q extends P {
        xx = super;
                  ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
        static yy = super; // error for static initializer accessing super
                         ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
                    ~~~~~
!!! error TS2338: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class
    
        // Super is not allowed in constructor args
        constructor(public z = super, zz = super, zzz = () => super) {
                                    ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
                                                ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
                                                                   ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
                               ~~~~~
!!! error TS2336: 'super' cannot be referenced in constructor arguments.
                                           ~~~~~
!!! error TS2336: 'super' cannot be referenced in constructor arguments.
                                                              ~~~~~
!!! error TS2336: 'super' cannot be referenced in constructor arguments.
            super();
        }
    
        foo(zz = super) {
                      ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            super.x();
            super.y(); // error
                  ~
!!! error TS2339: Property 'y' does not exist on type 'P'.
        }
    
        static bar(zz = super) {
                             ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            super.x(); // error
                  ~
!!! error TS2339: Property 'x' does not exist on type 'typeof P'.
            super.y();
        }
    }